infrastructure/registration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registration-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: registration
  template:
    metadata:
      labels:
        app: registration
    spec:
      containers:
        - name: registration-api
          image: siamandm/registration
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: registration-service
spec:
  type: ClusterIP
  selector:
    app: registration
  ports:
    - port: 8080
      targetPort: 8080
