infrastructure/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: web
              servicePort: 8080

          - path: /api/?(.*)
            backend:
              serviceName: registration-service
              servicePort: 8080
